tree-sitter-ghc-core/test/corpus/basic.txt
================================
Banner and result size
================================

==================== Tidy Core ====================

Result size of Tidy Core = {terms: 1, types: 0, coercions: 0, joins: 0/0}

--------------------------------

(source_file
  (banner)
  (result_size))

================================
Literal and application bindings
================================

x = "main"#

y = TrNameS x

--------------------------------

(source_file
  (binding name: (variable) rhs: (literal))
  (binding
    name: (variable)
    rhs: (application
      (constructor)
      (variable))))

================================
Lambda with case and constructor pattern
================================

f = \ x -> case x of { I# y -> y }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (variable)
      (case
        scrutinee: (variable)
        (alternative
          pattern: (pattern
            (con_pattern
              (constructor)
              (variable)))
          rhs: (variable))))))

================================
Case binder and default alternative
================================

g = case w of v { __DEFAULT -> v; 0# -> w }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      binder: (variable)
      (alternative
        pattern: (pattern)
        rhs: (variable))
      (alternative
        pattern: (pattern
          (literal))
        rhs: (variable)))))

================================
Let with primop application
================================

h = let { z = +# a 1# } in z

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (let
      (binding
        name: (variable)
        rhs: (application
          (operator)
          (variable)
          (literal)))
      body: (variable))))

================================
Recursive group and jump
================================

Rec {
go = \ n -> jump go n
end Rec }

--------------------------------

(source_file
  (rec_block
    (binding
      name: (variable)
      rhs: (lambda
        (variable)
        (jump
          (variable)
          (variable))))))

================================
Binding with function-type signature
================================

f :: GHC.Types.Int -> Int
f = \ x -> x

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (function_type
        (constructor)
        (constructor)))
    name: (variable)
    rhs: (lambda
      (variable)
      (variable))))

================================
Typed binder and type application
================================

k = \ (x :: Int) -> f @Int x

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (constructor))
      (application
        (variable)
        (type_arg
          (constructor))
        (variable)))))

================================
Forall signature and tuple
================================

p :: forall a. (a, a)
p = (x, y)

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (forall_type
        (tyvar
          (variable))
        (type_paren_form
          (tyvar
            (variable))
          (tyvar
            (variable)))))
    name: (variable)
    rhs: (tuple
      (variable)
      (variable))))

================================
Binding with IdInfo bracket
================================

f :: Int
[GblId, Arity=1, Str=<S>]
f = x

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (constructor))
    info: (idinfo)
    name: (variable)
    rhs: (variable)))

================================
Annotated typed binder
================================

g = \ (x [Occ=Once1!] :: Int) -> x

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (binder_annotation)
        (constructor))
      (variable))))

================================
Signature name annotation
================================

h [Occ=LoopBreaker] :: Int
h = h

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (binder_annotation)
      (constructor))
    name: (variable)
    rhs: (variable)))

================================
Cast with coercion
================================

f = x `cast` (Sym d :: a ~R# b)

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (cast
      (variable)
      (coercion))))

================================
Coercion argument
================================

g = h @~(co :: a ~# b)

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (application
      (variable)
      (coercion_arg
        (coercion)))))

================================
Tuple pattern and source tick
================================

k = case x of { (a, b) -> src<F:1:2> a }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      (alternative
        pattern: (pattern
          (tuple_pattern
            (variable)
            (variable)))
        rhs: (tick_expr
          (tickish)
          (variable))))))
